--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
                 <li class="col-sm-4 col-xs-12">
                    <b>Test Image - </b> 
-                   <img src="bottle.jpeg" class="img-responsive">
+                   <img src="IMG_0139.jpg" class="img-responsive1">
+                   <img src="IMG_0140.jpg" class="img-responsive2">
+                   <img src="IMG_0141.jpg" class="img-responsive3"
                 </li>
 
                 <h5 class="col-sm-4 col-xs-12" >
